--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/dist/server.js",
-    "server": "nodemon server/src/server.ts",
-    "client": "npm run dev --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev:server": "nodemon server/src/server.ts",
+    "dev:client": "npm run dev --prefix client",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "build:server": "tsc -p .",
-    "build:client":"npm run build --prefix client",
+    "build:client": "npm run build --prefix client",
     "build": "concurrently \"npm run build:server\" \"npm run build:client\"",
     "test": "vitest run"
   },
@@ -18,7 +18,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "socket.io": "^4.7.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
