--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "budget chess.com",
+  "name": "multiplayer chess",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
